<resources>
    <string name="app_name">Digital Shoots</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="per_cancel">Cancel</string>
    <string name="per_sure">Go open it</string>
    <string name="per_title">Digital Shoots Need location permission</string>
    <string name="per_message">Bluetooth communication relies on system location permission, please allow permission to open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pls_connect">Please connect Bluetooth </string>
    <string name="game_time">GAME TIME </string>
    <string name="score">SCORE </string>
    <string name="shooter_tutor">SHOOTER TUTOR </string>
    <string name="setting">SETTING</string>
    <string name="title_bluetooth">BLUETOOTH</string>
    <string name="title_scan">SCAN</string>

    <string name="bottom_trainers">Trainers</string>
    <string name="bottom_drills">Drills</string>
    <string name="bottom_tracking">Tracking</string>
    <string name="bottom_my_stats">My Stats</string>
    <string name="bottom_my_account">My Account</string>
    <string name="stat_first_title">YOU\'RE IN PROGRESS...</string>
    <string name="stats_string_1">Excellent</string>
    <string name="stats_string_2">Avg</string>
    <string name="stats_string_3">Poor</string>
    <string name="stats_score">SCORE</string>
    <string name="stats_speed">SPEED</string>
    <string name="stats_status_1">PRO</string>
    <string name="stats_status_2">GOOD</string>
    <string name="stats_time">Mar.2022</string>
    <string name="stats_profile">PROFILE</string>
    <string name="stats_score_title">Score</string>
    <string name="stats_score_today">Today</string>
    <string name="stats_score_video">video</string>
    <string name="stats_shoot">Shoot</string>
    <string name="stats_speed_unit">Km/h</string>
    <string name="stats_top_title">TOP 10 RECORDS</string>
    <string name="request_camera_permission">please allow camera permission</string>
    <string name="ble_status_disconnected">Disconnected</string>
    <string name="ble_status_connected">Connected</string>

</resources>