<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f00001"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/blue_scan_root_bg"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="14dp"
        android:paddingEnd="10dp"
        android:paddingBottom="14dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/stats_card_bg"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/user_icon" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/stats_name_bg"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/bottom_tracking"
                android:textColor="#fc850f"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/stats_time"
                android:textColor="#f5a530"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/stats_card_bg"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_stats_score_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stats_score_0" />

                <TextView
                    android:id="@+id/tv_stats_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/stats_score"
                    android:textColor="#00c371"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_stats_score_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_stats_score"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/stats_status_1"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_stats_score_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="200" />

                <ImageView
                    android:id="@+id/iv_stats_score_indicator"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="100dp"
                    android:rotation="90"
                    android:src="@drawable/stats_indicator_1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_stats_speed_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stats_speed_2" />

                <TextView
                    android:id="@+id/tv_stats_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/stats_speed"
                    android:textColor="#00c371"
                    android:textSize="16sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/tv_stats_speed_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tv_stats_speed"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/stats_status_2"
                    android:textColor="#000000"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_stats_speed_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="100" />

                <ImageView
                    android:id="@+id/iv_stats_speed_indicator"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="100dp"
                    android:rotation="90"
                    android:src="@drawable/stats_indicator_1" />
            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/stats_card_bg"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/stat_first_title"
                android:textColor="#00c472"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">


                <ImageView
                    android:id="@+id/iv_stats_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/stats_progress" />

                <FrameLayout
                    android:id="@+id/fl_stats_indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="26dp"
                    android:paddingEnd="26dp">


                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/stats_indicator_1" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/stats_string_1"
                        android:textColor="#848483" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textColor="#848483" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/stats_string_2"
                        android:textColor="#848483" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:text="@string/stats_string_3"
                        android:textColor="#848483" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>